--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
+@font-face {
+  font-family: 'Pacifico';
+  src: local('Pacifico'), url(./fonts/Pacifico-Regular.ttf) format('truetype');
+}
+
+/*.App {*/
+/*  margin: 40px;*/
+/*}*/
+
+.Group {
+  display: grid;
+  /* Будет создано 3 колонки */
+  grid-template-columns: auto auto;
+  /* Будет создано 3 ряда */
+  grid-template-rows: auto auto auto;
+}
+
+.Item {
+  font-size: 20px;
   text-align: center;
+  background-color: var(--red);
+  color: var(--white);
+  padding: 20px;
+  border: 10px solid var(--blue);
+  margin: 20px;
+  /*width: 150px;*/
+  /*height: 150px;*/
+  border-radius: 10%;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25)
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Item:hover {
+  background-color: var(--red);
+  opacity: 0.3
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Item:active {
+  background-color: var(--red);
+  opacity: 1;
+  box-shadow: 0 5px 5px rgba(201, 168, 54, 0.5);
+  border-color: rgba(139, 220, 217,1);
+  border-radius: 10%;
+  color: var(--gold);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+.Large {
+  border-radius: 5%;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
